bootstrap index+footer

--- a/html/delicatessen.html
+++ b/html/delicatessen.html
@@ -80,11 +80,13 @@
         </div>
 
 <footer class="footer">
-    <p>@gomelsky.grill</p>
-    <p>Tel:1232543634</p> 
-    <p>Email:gomelskygrillandmarket@gmail.com </p>
-</footer>
 
+    <i class="bi bi-instagram"> @gomelsky.grill</i>
+    <i class="bi bi-envelope-paper-fill"> gomelskygrillandmarket@gmail.com</i>
+    <i class="bi bi-phone"> +5412-325-4364</i>
+    <i class="bi bi-facebook"> @gomelsky.grill</i>
+            
+</footer>
 </body>
 
 </html>
