--- a/html/staff.html
+++ b/html/staff.html
@@ -41,11 +41,11 @@
 </main>
 <footer class="footer">
 
-    <p>@gomelsky.grill</p>
-    <p>Tel:1232543634</p> 
-    <p>Email:gomelskygrillandmarket@gmail.com </p>
+    <i class="bi bi-instagram"> @gomelsky.grill</i>
+    <i class="bi bi-envelope-paper-fill"> gomelskygrillandmarket@gmail.com</i>
+    <i class="bi bi-phone"> +5412-325-4364</i>
+    <i class="bi bi-facebook"> @gomelsky.grill</i>
     
 </footer>
-
 </body>
 </html>
