--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="keywords" content="al asador, vip catering, carne barbacoa, don asador, servicio de catering para eventos, asado al asador, parrilla movil, fogonero con ruedas">
+    <meta name="description" content="Los asados mas ricos encontralos en Gomelsky Grill and Market">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Roboto:ital,wght@0,100;1,100;1,300;1,400&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href= "../css/style.css">
-    <title>PROYECTO</title>
+    <title>Nuestra Historia</title>
 </head>
 <body>
     <div class="grillaggm-quienesSomos"></div>
@@ -28,12 +30,10 @@
     </header>
 <section class="section-quienesSomos">
     <h1> Gomelsky Grill and Market</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur neque, omnis perspiciatis non provident maxime necessitatibus dignissimos obcaecati voluptas autem rerum assumenda alias accusamus dolorem doloribus quis!
-         Libero numquam iusto nisi, molestias dolorum earum ratione aliquam itaque eveniet sequi illum fugit natus explicabo delectus. Asperiores doloribus in aut perspiciatis sit ullam odio. Aperiam voluptas sequi quis, 
-         mollitia rem minus cupiditate tempora sed ipsam molestiae et adipisci repudiandae nobis repellat, animi hic doloremque distinctio blanditiis ad doloribus ut! Ullam voluptates, nisi possimus dignissimos deleniti, 
-         impedit at asperiores perspiciatis tempora harum quis ratione in corrupti unde vel iure aliquam blanditiis. Nostrum, deserunt eum rem a delectus consectetur sint? Distinctio iure dolore neque odio laudantium maxime et assumenda veritatis nihil. Obcaecati minima praesentium quas laborum commodi ea vero nihil, fugit veritatis officia sed, beatae labore perspiciatis recusandae eos sequi earum cupiditate? Error sequi voluptatibus aspernatur ea ut rerum odio velit, accusantium autem perferendis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime iure soluta eos perspiciatis possimus fuga tempora dolorem iusto? Natus, dicta. Temporibus rerum illo repudiandae veritatis alias ea consectetur sit eaque.</p>
+    <p>Somos una familia dedicada a brindar momentos y sensaciones culinarias únicas en la vida de nuestros comensales. Podes deleitarte con nuestras conservas, disfrutar de nuestros asados al asador, o directamente venir a visitarnos a nuestro campo y disfrutar de una Gomelsky experiencia completa inolvidable.</p>
+    <p> !!!!!!NO TE LO PIERDAS¡¡¡¡¡</p>  
 </section>
+
 </main>
 <footer class="footer">
     <i class="bi bi-instagram"> @gomelsky.grill</i>
