--- a/html/staff.html
+++ b/html/staff.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Roboto:ital,wght@0,100;1,100;1,300;1,400&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href= "../css/style.css">
-    <title>PROYECTO</title>
+    <title>Equipo Gomelsky Grill And Market</title>
 </head>
 <body>
     <div class="grillaggm-Staff">
@@ -32,8 +32,7 @@
 
 <section class="section-staff">
 <h1>Nuestro Equipo</h1>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti atque, inventore suscipit quae minus dolorum. Incidunt perspiciatis amet id consectetur, quisquam eum aut autem exercitationem numquam nihil. Dolorum unde quam nulla, earum modi accusantium optio praesentium rem alias repudiandae id corrupti voluptate debitis nam quisquam ut ratione tenetur. Ea maxime asperiores fugiat explicabo iure ab,
-aliquam nam illo corporis amet labore aut eligendi earum voluptate similique ad, nulla voluptatem adipisci.</p>
+<p>Contamos con un equipo de especializado en cocina al disco, al asador, con años de experiencia frente a las brazas. </p>
 <img class="img-staff" src="img/asador.jpg" alt="">
 </section>
 </main>
