seo + mixin- extend

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="keywords" content="mensaje, contacto, formulario, contactanos">
+    <meta name="description" content="Completa nuestro formulario asi podemos contactarte.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Roboto:ital,wght@0,100;1,100;1,300;1,400&display=swap" rel="stylesheet">     
@@ -49,11 +51,13 @@
     </form>  
 
 </main>
-<footer class="footer">
+<footer>
+    <div class="footer">
     <i class="bi bi-instagram"> @gomelsky.grill</i>
     <i class="bi bi-envelope-paper-fill"> gomelskygrillandmarket@gmail.com</i>
     <i class="bi bi-phone"> +5412-325-4364</i>
     <i class="bi bi-facebook"> @gomelsky.grill</i>  
+    </div>        
 </footer>
 </div>
 </body>
