--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta name="keywords" content="al asador, vip catering, carne barbacoa, don asador, servicio de catering para eventos, asado al asador, parrilla movil, fogonero con ruedas">
-    <meta name="description" content="Los asados mas ricos encontralos en Gomelsky Grill and Market">
+    <meta name="keywords" content="Asados internacionales, comida casera, sensaciones culinarias, don asador, catering para eventos, parrilla al asador, ">
+    <meta name="description" content="Desde panama a la argentina con los mejores asador">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Roboto:ital,wght@0,100;1,100;1,300;1,400&display=swap" rel="stylesheet">     
@@ -35,11 +35,13 @@
 </section>
 
 </main>
-<footer class="footer">
+<footer>
+    <div class="footer">
     <i class="bi bi-instagram"> @gomelsky.grill</i>
     <i class="bi bi-envelope-paper-fill"> gomelskygrillandmarket@gmail.com</i>
     <i class="bi bi-phone"> +5412-325-4364</i>
     <i class="bi bi-facebook"> @gomelsky.grill</i>   
+    </div>
 </footer>
 </body>
 
