--- a/html/staff.html
+++ b/html/staff.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="keywords" content="Equipo de trabado, asador criollo, chulengo, ahumador criollo, ">
+    <meta name="description" content="Conoce nuestro equipo de asadores culinarios">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Roboto:ital,wght@0,100;1,100;1,300;1,400&display=swap" rel="stylesheet">     
@@ -29,19 +31,20 @@
         </header>
 
 <main>
-
 <section class="section-staff">
 <h1>Nuestro Equipo</h1>
-<p>Contamos con un equipo de especializado en cocina al disco, al asador, con años de experiencia frente a las brazas. </p>
+<p>Contamos con un equipo de especializado en cocina al disco, al asador, con años de experiencia frente a las brasas.  </p>
 <img class="img-staff" src="img/asador.jpg" alt="">
 </section>
 </main>
     </div>
-<footer class="footer">
+<footer>
+    <div class="footer">
     <i class="bi bi-instagram"> @gomelsky.grill</i>
     <i class="bi bi-envelope-paper-fill"> gomelskygrillandmarket@gmail.com</i>
     <i class="bi bi-phone"> +5412-325-4364</i>
-    <i class="bi bi-facebook"> @gomelsky.grill</i>   
+    <i class="bi bi-facebook"> @gomelsky.grill</i>
+</div>   
 </footer>
 </body>
 </html>
