--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
             </div>
 
 </body>
-<footer class="footer">
+<footer>
+  <div class="footer">
     <i class="bi bi-instagram"> @gomelsky.grill</i>
     <i class="bi bi-envelope-paper-fill"> gomelskygrillandmarket@gmail.com</i>
     <i class="bi bi-phone"> +5412-325-4364</i>
     <i class="bi bi-facebook"> @gomelsky.grill</i> 
+  </div>
 </footer>
 </html>
 
