--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <nav class="menuHeader">
                 <ul>
-                    <li><a href="index.html">Index</a></Li>
+                    <li><a href="index.html">Home</a></Li>
                     <li> <a href="html/quienessomos.html">Quienes somos</a></li>
                     <li> <a href="html/delicatessen.html">Delicatessen</a></li>
                     <li> <a href="html/staff.html">Staff</a></li>
